--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -191,7 +191,7 @@ components:
           padding: ['0', null, '0', null]
       type: ColumnPanel
     - components:
-      - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
+      - layout_properties: {grid_position: 'GDWDTW,YFBYQG QZJWKR,TQRGOL'}
         name: tor_label
         properties:
           align: center
@@ -202,7 +202,7 @@ components:
           text: Torsdag
         type: Label
       - event_bindings: {click: tor_button_click}
-        layout_properties: {grid_position: 'QHWKSS,YBOXFJ'}
+        layout_properties: {grid_position: 'GDWDTW,YFBYQG QHWKSS,YBOXFJ'}
         name: tor_button
         properties:
           font_size: 25
@@ -212,7 +212,11 @@ components:
             padding: ['0', '12', '0', '12']
           text: '0'
         type: Button
-      - layout_properties: {grid_position: 'JUEBES,WOMSNG'}
+      - layout_properties: {grid_position: 'GDWDTW,PBOJFI'}
+        name: column_panel_3
+        properties: {}
+        type: ColumnPanel
+      - layout_properties: {grid_position: 'GDWDTW,YFBYQG JUEBES,WOMSNG'}
         name: tor_akt_label
         properties:
           align: center
