--- a/anvil.yaml
+++ b/anvil.yaml
@@ -89,6 +89,9 @@ db_schema:
     - admin_ui: {width: 200}
       name: email_confirmation_key
       type: string
+    - admin_ui: {order: 9, width: 200}
+      name: navn
+      type: string
     server: full
     title: Users
 dependencies: []
