--- a/anvil.yaml
+++ b/anvil.yaml
@@ -59,6 +59,18 @@ db_schema:
       type: date
     server: full
     title: Trekning
+  userinfo:
+    client: none
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: user
+      target: users
+      type: link_single
+    - admin_ui: {order: 1, width: 200}
+      name: navn
+      type: string
+    server: full
+    title: UserInfo
   users:
     client: none
     columns:
@@ -88,9 +100,6 @@ db_schema:
       type: simpleObject
     - admin_ui: {width: 200}
       name: email_confirmation_key
-      type: string
-    - admin_ui: {order: 9, width: 200}
-      name: navn
       type: string
     server: full
     title: Users
