--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -4,6 +4,18 @@ components:
     name: label_1
     properties: {align: center, text: Individuell resultatliste}
     type: Label
+  - components:
+    - layout_properties: {}
+      name: resultat_repeat_panel
+      properties: {item_template: Resultat_individuell.RowTemplate2}
+      type: RepeatingPanel
+    layout_properties: {grid_position: 'QHWAEX,RKEPZN'}
+    name: data_grid_1
+    properties:
+      columns:
+      - {data_key: column_1, id: JKSDUP, title: Deltager}
+      - {data_key: column_2, id: VJQQOR, title: Poeng}
+    type: DataGrid
   - event_bindings: {click: lukk_button_click}
     layout_properties: {grid_position: 'FACYFA,RKQROA'}
     name: lukk_button
