--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -64,7 +64,7 @@ components:
       type: Button
     layout_properties: {grid_position: 'SYZSGX,SXLCKE'}
     name: enkeltbruker_card
-    properties: {role: outlined-card, visible: false}
+    properties: {role: tonal-card, visible: false}
     type: ColumnPanel
   layout_properties: {grid_position: 'DJZTTS,OKSYEP'}
   name: outlined_card_1
@@ -86,38 +86,80 @@ components:
       - layout_properties: {}
         name: label_1
         properties:
-          text: "Paste inn en brukerliste på dette formatet:\n[\n{\"email\":\"abc@framo.no\",\"navn\":\"Ole Olsen\",password\":\"123123\"},\n{\"email\":\"def@framo.no\",,\"navn\":\"Hans Hansen\",\"password\":\"345345\"}\n] "
+          text: |
+            Paste inn en brukerliste på dette formatet:
+            [{"email": "abc@framo.no", "navn": "Ole Olsen", "password": "123123"}, {"email": "def@framo.no", "navn": "Hans Hansen", "password": "345345"}]
         type: Label
       layout_properties: {grid_position: 'JQQQJK,TMVFDG'}
       name: flow_panel_3
       properties: {}
       type: FlowPanel
     - layout_properties: {grid_position: 'XZJZNR,CIEUFV'}
-      name: text_box_1
+      name: users_label
       properties: {}
       type: TextBox
-    - layout_properties: {grid_position: 'KXWUJW,LUZKXG'}
+    - event_bindings: {click: button_4_click}
+      layout_properties: {grid_position: 'KXWUJW,LUZKXG'}
       name: button_4
       properties: {role: tonal-button, text: Opprett mange på en gang}
       type: Button
     layout_properties: {grid_position: 'UMEOVY,JQZGGS'}
     name: import_mang_card
-    properties: {role: outlined-card, visible: false}
+    properties: {role: tonal-card, visible: false}
     type: ColumnPanel
   layout_properties: {grid_position: 'GJXLVI,ATHCGL'}
   name: outlined_card_2
   properties: {role: outlined-card}
   type: ColumnPanel
 - components:
-  - components:
-    - layout_properties: {}
-      name: label_2
-      properties: {text: Admin teams}
-      type: Label
+  - components: []
     layout_properties: {grid_position: 'FXAIQJ,MLADYY'}
     name: flow_panel_2
     properties: {align: center}
     type: FlowPanel
+  - event_bindings: {click: teams_button_click}
+    layout_properties: {grid_position: 'WLRFEA,MPWNJJ'}
+    name: teams_button
+    properties: {text: Admin teams}
+    type: Button
+  - components:
+    - components:
+      - event_bindings: {click: label1_click}
+        layout_properties: {}
+        name: label1
+        properties: {text: 'Nytt team:'}
+        type: Button
+      - name: nytt_team_box
+        properties: {}
+        type: TextBox
+      - event_bindings: {click: Opprett_team_button_click}
+        layout_properties: {}
+        name: Opprett_team_button
+        properties: {text: Opprett}
+        type: Button
+      layout_properties: {grid_position: 'KYBWJB,ZGPXOQ'}
+      name: flow_panel_10
+      properties: {}
+      type: FlowPanel
+    - components:
+      - name: label_2
+        properties: {}
+        type: Label
+      - name: team_repeating_panel
+        properties: {item_template: admin.RowTemplate6}
+        type: RepeatingPanel
+      layout_properties: {grid_position: 'POGSJB,RPVVVR'}
+      name: data_grid_1
+      properties:
+        columns:
+        - {data_key: column_1, id: JKSDUP, title: Team}
+        - {data_key: column_3, expand: false, id: OJLQEN, title: Poeng, width: 226.5714111328125}
+        - {data_key: column_1, id: KFHMOZ, title: ''}
+      type: DataGrid
+    layout_properties: {grid_position: 'HZXKJA,BZQCWB'}
+    name: team_card
+    properties: {role: tonal-card, visible: false}
+    type: ColumnPanel
   layout_properties: {grid_position: 'TDUQMG,HKEXGO'}
   name: outlined_card_3
   properties: {role: outlined-card}
