--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -222,13 +222,14 @@ components:
       name: flow_panel_11
       properties: {align: center}
       type: FlowPanel
-    - layout_properties: {grid_position: 'TAJLEY,CDJERC'}
-      name: label_8
-      properties: {}
-      type: Label
+    - event_bindings: {click: lagre_konkurranse_button_click}
+      layout_properties: {grid_position: 'TXCZHI,HFAWRC'}
+      name: lagre_konkurranse_button
+      properties: {role: outlined-button, text: Endre konkurranse}
+      type: Button
     layout_properties: {grid_position: 'NWYMHD,ASANKT'}
-    name: outlined_card_3
-    properties: {role: tonal-card}
+    name: konk_card
+    properties: {role: tonal-card, visible: false}
     type: ColumnPanel
   layout_properties: {grid_position: 'DJZTTS,OKSYEP'}
   name: outlined_card_1
