--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -139,9 +139,19 @@ components:
             font_size: 25
             foreground: black
             spacing:
-              margin: ['0', null, null, null]
+              margin: ['0', null, '0', null]
               padding: ['0', '12', '0', '12']
             text: '0'
+          type: Button
+        - event_bindings: {click: man_ikon_click}
+          layout_properties: {grid_position: 'YXPEVW,RRWTYY'}
+          name: man_ikon
+          properties:
+            icon: ''
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', '0', '0', '0']
+            text: ''
           type: Button
         - layout_properties: {grid_position: 'EBOSPB,PRGYBS'}
           name: man_akt_label
@@ -152,7 +162,18 @@ components:
               margin: ['0', null, null, null]
               padding: ['0', null, null, null]
             text: ''
+            visible: false
           type: Label
+        - event_bindings: {click: man_ikon_click}
+          layout_properties: {grid_position: 'EBOSPB,RGEVZC'}
+          name: man_ikon_copy
+          properties:
+            icon: ''
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', '0', '0', '0']
+            text: ''
+          type: Button
         layout_properties: {}
         name: man_column_panel
         properties:
@@ -182,6 +203,16 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
+        - event_bindings: {click: man_ikon_click}
+          layout_properties: {grid_position: 'YOVONK,MDWBNT'}
+          name: tir_ikon
+          properties:
+            icon: ''
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', '0', '0', '0']
+            text: ''
+          type: Button
         - layout_properties: {grid_position: 'PXLERO,PKVRMB'}
           name: tir_akt_label
           properties:
@@ -191,6 +222,7 @@ components:
               margin: ['0', null, null, null]
               padding: ['0', null, null, null]
             text: ''
+            visible: false
           type: Label
         layout_properties: {}
         name: tir_column_panel
@@ -221,6 +253,16 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
+        - event_bindings: {click: man_ikon_click}
+          layout_properties: {grid_position: 'UTCIZV,TEIAUI'}
+          name: ons_ikon
+          properties:
+            icon: ''
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', '0', '0', '0']
+            text: ''
+          type: Button
         - layout_properties: {grid_position: 'SOIAYZ,XAITQX'}
           name: ons_akt_label
           properties:
@@ -230,6 +272,7 @@ components:
               margin: ['0', null, null, null]
               padding: ['0', null, null, null]
             text: ''
+            visible: false
           type: Label
         layout_properties: {}
         name: ons_column_panel
@@ -239,7 +282,7 @@ components:
             padding: ['0', null, '0', null]
         type: ColumnPanel
       - components:
-        - layout_properties: {grid_position: 'GDWDTW,YFBYQG QZJWKR,TQRGOL'}
+        - layout_properties: {grid_position: 'QZJWKR,TQRGOL'}
           name: tor_label
           properties:
             align: center
@@ -250,7 +293,7 @@ components:
             text: Torsdag
           type: Label
         - event_bindings: {click: tor_button_click}
-          layout_properties: {grid_position: 'GDWDTW,YFBYQG QHWKSS,YBOXFJ'}
+          layout_properties: {grid_position: 'QHWKSS,YBOXFJ'}
           name: tor_button
           properties:
             font_size: 25
@@ -260,7 +303,17 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
-        - layout_properties: {grid_position: 'GDWDTW,YFBYQG JUEBES,WOMSNG'}
+        - event_bindings: {click: man_ikon_click}
+          layout_properties: {grid_position: 'VWOFYB,AMHZOL'}
+          name: tor_ikon
+          properties:
+            icon: ''
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', '0', '0', '0']
+            text: ''
+          type: Button
+        - layout_properties: {grid_position: 'JUEBES,WOMSNG'}
           name: tor_akt_label
           properties:
             align: center
@@ -269,6 +322,7 @@ components:
               margin: ['0', null, null, null]
               padding: ['0', null, null, null]
             text: ''
+            visible: false
           type: Label
         layout_properties: {}
         name: tor_column_panel
@@ -304,6 +358,16 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
+        - event_bindings: {click: man_ikon_click}
+          layout_properties: {grid_position: 'XIGWNJ,CVGCSB'}
+          name: fre_ikon
+          properties:
+            icon: ''
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', '0', '0', '0']
+            text: ''
+          type: Button
         - layout_properties: {grid_position: 'EAQPVP,FHTBQS'}
           name: fre_akt_label
           properties:
@@ -313,6 +377,7 @@ components:
               margin: ['0', null, null, null]
               padding: ['0', null, null, null]
             text: ''
+            visible: false
           type: Label
         layout_properties: {}
         name: fre_column_panel
@@ -343,6 +408,16 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
+        - event_bindings: {click: man_ikon_click}
+          layout_properties: {grid_position: 'OZSSHY,UYPFDW'}
+          name: lor_ikon
+          properties:
+            icon: ''
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', '0', '0', '0']
+            text: ''
+          type: Button
         - layout_properties: {grid_position: 'ETZXYW,AGFTEO'}
           name: lor_akt_label
           properties:
@@ -352,6 +427,7 @@ components:
               margin: ['0', null, null, null]
               padding: ['0', null, null, null]
             text: ''
+            visible: false
           type: Label
         layout_properties: {}
         name: lor_column_panel
@@ -382,6 +458,16 @@ components:
               padding: ['0', '12', '0', '12']
             text: '0'
           type: Button
+        - event_bindings: {click: man_ikon_click}
+          layout_properties: {grid_position: 'EPPJSO,CEFBDS'}
+          name: son_ikon
+          properties:
+            icon: ''
+            spacing:
+              margin: ['0', null, '0', null]
+              padding: ['0', '0', '0', '0']
+            text: ''
+          type: Button
         - layout_properties: {grid_position: 'JWPLVX,KFSMCP'}
           name: son_akt_label
           properties:
@@ -391,6 +477,7 @@ components:
               margin: ['0', null, null, null]
               padding: ['0', null, null, null]
             text: ''
+            visible: false
           type: Label
         layout_properties: {}
         name: son_column_panel
