--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -40,65 +40,93 @@ components:
         type: FlowPanel
       - components:
         - components:
-          - layout_properties: {grid_position: 'DTSQLA,NDUWGZ'}
-            name: label_3
-            properties: {text: Skriv type aktivitet eller velg et ikon som passer}
+          - layout_properties: {}
+            name: label_5
+            properties: {text: Antall skritt}
             type: Label
-          - components:
-            - name: label_2
-              properties: {text: 'Aktivitet:'}
-              type: Label
-            - layout_properties: {width: 132.14285278320312}
-              name: aktivitet_box
-              properties: {}
-              type: TextBox
-            layout_properties: {grid_position: 'YISWBH,BAXIOP'}
-            name: flow_panel_2
+          - event_bindings: {pressed_enter: skritt_pressed_enter}
+            name: skritt
             properties: {}
-            type: FlowPanel
-          name: column_panel_2
-          properties: {}
-          type: ColumnPanel
-        - components:
-          - event_bindings: {mouse_down: ikon_preview_click}
-            layout_properties: {grid_position: 'VJBWVC,KSQHVW'}
-            name: ikon_preview
-            properties: {height: 78.63638305664062}
-            type: Image
-          layout_properties: {width: 120}
-          name: outlined_card_2
-          properties: {role: outlined-card}
-          type: ColumnPanel
-        layout_properties: {grid_position: 'ZFFFAT,TWLSIX'}
-        name: flow_panel_4
-        properties: {align: center}
-        type: FlowPanel
+            type: TextBox
+          - event_bindings: {click: button_1_click}
+            layout_properties: {}
+            name: button_1
+            properties: {text: bruk skritt}
+            type: Button
+          layout_properties: {grid_position: 'AQEEEG,AMRQJI'}
+          name: flow_panel_5
+          properties: {align: center}
+          type: FlowPanel
+        layout_properties: {grid_position: 'YRFJMT,THSUMJ'}
+        name: outlined_card_4
+        properties: {background: 'theme:Secondary Container', role: outlined-card}
+        type: ColumnPanel
       - components:
-        - layout_properties: {grid_position: 'VZQZVR,ZKWIOM'}
+        - components:
+          - components:
+            - layout_properties: {grid_position: 'DTSQLA,NDUWGZ'}
+              name: label_3
+              properties: {text: Skriv type aktivitet eller velg et ikon som passer}
+              type: Label
+            - components:
+              - name: label_2
+                properties: {text: 'Aktivitet:'}
+                type: Label
+              - layout_properties: {width: 132.14285278320312}
+                name: aktivitet_box
+                properties: {}
+                type: TextBox
+              layout_properties: {grid_position: 'YISWBH,BAXIOP'}
+              name: flow_panel_2
+              properties: {}
+              type: FlowPanel
+            name: column_panel_2
+            properties: {}
+            type: ColumnPanel
+          - components:
+            - event_bindings: {mouse_down: ikon_preview_click}
+              layout_properties: {grid_position: 'VJBWVC,KSQHVW'}
+              name: ikon_preview
+              properties: {height: 78.63638305664062, source: _/theme/walking.svg}
+              type: Image
+            layout_properties: {width: 120}
+            name: outlined_card_2
+            properties: {role: outlined-card}
+            type: ColumnPanel
+          layout_properties: {grid_position: 'YYWPXO,NGFCDH'}
+          name: flow_panel_4
+          properties: {align: center}
+          type: FlowPanel
+        layout_properties: {grid_position: 'QOHQJP,TYFBLU'}
+        name: outlined_card_3
+        properties: {background: 'theme:Secondary Container', role: outlined-card}
+        type: ColumnPanel
+      - components:
+        - layout_properties: {grid_position: 'COTRXE,GOFOCS'}
           name: label_4
           properties: {text: Her kan du skrive en lengre beskrivelse hvis du ønsker}
           type: Label
-        - layout_properties: {grid_position: 'SSGWTO,FIHUKR'}
+        - layout_properties: {grid_position: 'ZPVGEF,FPPEAH'}
           name: beskrivelse
           properties: {height: 49.7142333984375}
           type: TextArea
-        layout_properties: {grid_position: 'HLMYBC,AIRTPG'}
-        name: column_panel_3
-        properties: {}
+        layout_properties: {grid_position: 'DIGVCK,ALKOBZ'}
+        name: outlined_card_5
+        properties: {background: 'theme:Secondary Container', role: outlined-card}
         type: ColumnPanel
       layout_properties: {grid_position: 'RVIUTL,JORSMI'}
       name: outlined_card_1_copy
-      properties: {background: 'theme:Secondary Container', role: elevated-card}
+      properties: {background: '', role: elevated-card}
       type: ColumnPanel
     layout_properties: {grid_position: 'RBCWIU,QASPLX'}
     name: column_panel_1
     properties: {}
     type: ColumnPanel
   - components:
-    - event_bindings: {click: lagre_button_click}
+    - event_bindings: {click: OK_click}
       layout_properties: {}
-      name: lagre_button
-      properties: {align: right, role: filled-button, text: Lagre}
+      name: Lagre
+      properties: {align: right, role: filled-button, text: OK}
       type: Button
     layout_properties: {grid_position: 'LDAPRP,OKEEXD'}
     name: flow_panel_3
