--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -1,5 +1,16 @@
 components_by_slot:
   content:
+  - event_bindings: {tab_click: tabs_1_tab_click}
+    layout_properties: {}
+    name: tabs_1
+    properties:
+      active_tab_index: 0
+      tab_titles: [Individuell, Team]
+    type: form:dep_f5o4wvd4wmhr6n:Tabs
+  - layout_properties: {}
+    name: divider_1
+    properties: {}
+    type: form:dep_91t3sowbnwbk:_Components.Divider
   - components:
     - components:
       - layout_properties: {grid_position: 'WNEDIZ,WTMWPC'}
@@ -10,11 +21,6 @@ components_by_slot:
       name: column_panel_1
       properties: {}
       type: ColumnPanel
-    - event_bindings: {click: button_1_click}
-      layout_properties: {grid_position: 'EXHGXJ,AEWIPX'}
-      name: button_1
-      properties: {role: filled-button, text: 'Poengstilling Team '}
-      type: Button
     - components:
       - layout_properties: {}
         name: resultat_repeat_panel
@@ -29,64 +35,37 @@ components_by_slot:
         - {data_key: column_1, expand: false, id: LSHEHV, title: Team, width: 87}
         - {data_key: column_1, id: PFFFKV, title: Utmerkelser}
       type: DataGrid
-    - components:
-      - layout_properties: {grid_position: 'FHRIMM,XYECDR'}
-        name: label_2_copy
-        properties:
-          align: center
-          font_size: 8
-          spacing:
-            margin: ['0', null, '0', null]
-            padding: ['0', null, '0', null]
-          text: 'Streak er den lengste sammehnegnende perioden deltageren har registrert aktivitet hver dag. Dagens aktivitet påvirker ikke streak enda. Streak benyttes for å skille mellom deltagere med ellers like mye poeng. '
-        type: Label
-      - layout_properties: {grid_position: 'HKNYRD,ECOEGL'}
-        name: label_2_copy_2
-        properties:
-          align: center
-          font_size: 8
-          spacing:
-            margin: ['0', null, '0', null]
-            padding: ['0', null, '0', null]
-          text: Bonus oppnås ved å vinne badges - kravene for disse er hemmelige og dukker opp etter hvert
-        type: Label
-      - layout_properties: {grid_position: 'KEKTFQ,YQCGFF'}
-        name: label_2_copy_copy
-        properties:
-          align: center
-          font_size: 8
-          spacing:
-            margin: ['0', null, '0', null]
-            padding: ['0', null, '0', null]
-          text: Score = ((poeng + bonus)  x 100)  + streak
-        type: Label
-      - layout_properties: {grid_position: 'XQGGRO,NPWPOT'}
-        name: label_2_copy_copy_copy
-        properties:
-          align: center
-          font_size: 8
-          spacing:
-            margin: ['0', null, '0', null]
-            padding: ['0', null, '0', null]
-          text: Pek på score for å se utregningen
-        type: Label
-      - layout_properties: {grid_position: 'FJCLHM,JPKMYX'}
-        name: label_2_copy_copy_copy_copy
-        properties:
-          align: center
-          font_size: 8
-          spacing:
-            margin: ['0', null, '0', null]
-            padding: ['0', null, '0', null]
-          text: Poeng beregnes om natten  og blir ikke påvirket av hva du har gjort i dag.
-        type: Label
-      layout_properties: {grid_position: 'UADQNT,KYRNWY'}
-      name: outlined_card_2
-      properties: {role: outlined-card}
-      type: ColumnPanel
     layout_properties: {}
-    name: outlined_card_1_copy
+    name: individuell_card
     properties: {role: tonal-card}
+    type: ColumnPanel
+  - components:
+    - layout_properties: {grid_position: 'MTSGUN,FHFTBQ'}
+      name: label_1_copy
+      properties: {align: center, role: headline, text: Poengstilling Team}
+      type: Label
+    - components:
+      - name: team_resultat_repeating_panel
+        properties: {item_template: Resultat_team.RowTemplate5}
+        type: RepeatingPanel
+      layout_properties: {grid_position: 'ZLRLJD,SBUBFU'}
+      name: data_grid_1_copy
+      properties:
+        columns:
+        - {data_key: column_1, id: JKSDUP, title: Team}
+        - {data_key: column_2, id: VJQQOR, title: Poeng}
+        - {data_key: column_1, id: SERNKO, title: Bonus}
+        - {data_key: column_1, id: ESMKDP, title: Lengste streak}
+        - {data_key: column_1, id: MRJBSJ, title: Antall deltagere}
+        - {data_key: column_1, id: GOVPWM, title: Score}
+      type: DataGrid
+    - layout_properties: {grid_position: 'AVRRRJ,DXXQJB'}
+      name: text_1
+      properties: {align: center, text: Score = ((Poeng + Bonus) *100 + lengste streak på teamet)/antall personer i teamet}
+      type: form:dep_91t3sowbnwbk:_Components.Text
+    layout_properties: {}
+    name: team_card
+    properties: {role: tonal-card, visible: false}
     type: ColumnPanel
 is_package: true
 layout: {type: 'form:Homepage'}
