--- a/client_code/Resultat_team/form_template.yaml
+++ b/client_code/Resultat_team/form_template.yaml
@@ -5,11 +5,6 @@ components_by_slot:
       name: label_1
       properties: {align: center, role: headline, text: Poengstilling Team}
       type: Label
-    - event_bindings: {click: button_1_click}
-      layout_properties: {grid_position: 'KFQSRV,XGIAFS'}
-      name: button_1
-      properties: {role: filled-button, text: Poengstilling Individuell}
-      type: Button
     - components:
       - name: team_resultat_repeating_panel
         properties: {item_template: Resultat_team.RowTemplate5}
@@ -30,7 +25,7 @@ components_by_slot:
       properties: {align: center, text: Score = ((Poeng + Bonus) *100 + lengste streak på teamet)/antall personer i teamet}
       type: form:dep_91t3sowbnwbk:_Components.Text
     layout_properties: {}
-    name: outlined_card_1_copy
+    name: team_card
     properties: {role: tonal-card}
     type: ColumnPanel
 is_package: true
