--- a/anvil.yaml
+++ b/anvil.yaml
@@ -322,6 +322,9 @@ db_schema:
       name: framo_selskap
       target: framo_selskap
       type: link_single
+    - admin_ui: {order: 11, width: 200}
+      name: aktivitet_hash
+      type: string
     server: full
     title: userinfo
   users:
