--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -66,7 +66,7 @@ components_by_slot:
                 type: Button
               - layout_properties: {width: 46}
                 name: liga_image_copy
-                properties: {height: '45', source: '', visible: true}
+                properties: {height: '45', source: '', visible: false}
                 type: Image
               - event_bindings: {click: deltager_label_click}
                 layout_properties: {}
@@ -90,7 +90,7 @@ components_by_slot:
               type: FlowPanel
             - layout_properties: {width: 45.5875244140625}
               name: liga_image
-              properties: {height: '45', source: '', visible: true}
+              properties: {height: '45', source: '', visible: false}
               type: Image
             layout_properties: {grid_position: 'KWZNHX,RRCDZN MSMOMO,YMBRMH'}
             name: flow_panel_3
