--- a/client_code/teknisk_feil/form_template.yaml
+++ b/client_code/teknisk_feil/form_template.yaml
@@ -7,5 +7,10 @@ components:
   name: text_1
   properties: {align: center, style: body, text: Vi må ta en liten pause i testingen. Dere får en mail når vi er i gang igjen. Men ikke ta pause i treningen likevel.}
   type: form:dep_91t3sowbnwbk:_Components.Text
+- event_bindings: {click: outlined_button_1_click}
+  layout_properties: {grid_position: 'HQAQXX,FQFGPJ'}
+  name: outlined_button_1
+  properties: {role: outlined-button, text: ''}
+  type: Button
 container: {type: ColumnPanel}
 is_package: true
